tests/miniJava/pos/000109_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java = new java ( ) && new int [ 0 ] ; } }
