tests/miniJava/neg/004835_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) int [] java ) { return 0 ; } }
